# atlasmind

./: .gitignore  README.md  atlasmind.py  config.py  config_fields.py  jql_annotation_parser.py  jql_examples.py  jql_generator.py  jql_validator.py  main.py  models.py  profiles.json.example  pyproject.toml  server.py  settings.py
data/: jira-jql-annotated-queries.md
src/: document_processor_test.py  rag_process.py  system_prompt.md
tests/: test_jql_pipeline.py
